package net.dskim.desingpattern.adapter;

public interface LightningPhone {
	String recharge();
	void useLightning();
}
