package net.dskim.desingpattern.adapter;

public interface MicroUsbPhone {
	String recharge();
	void useMicroUsb();
}
