@startuml Adapter 패턴(김동석)

hide empty members
hide empty methods

title Adapter 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")


interface LightningPhone {
	String recharge()
	void useLightning()
}

interface MicroUsbPhone {
	String recharge()
	void useMicroUsb()
}

class Iphone {
	String recharge()
	void useLightning()
}

class Android {
	String recharge()
	void useMicroUsb()
}

class LightningToMicroUsbAdapter {
	private final LightningPhone lightningPhone
	LightningToMicroUsbAdapter(LightningPhone lightningPhone)
	String recharge()
	void useMicroUsb()
}

class LightningToMicroUsbAdapterTest {
	String rechargeMicroUsbPhone(MicroUsbPhone microUsbPhone)
}

LightningPhone <|.. Iphone
MicroUsbPhone <|.. LightningToMicroUsbAdapter
MicroUsbPhone <|.. Android

LightningToMicroUsbAdapter --> LightningPhone

LightningToMicroUsbAdapterTest --> MicroUsbPhone

@enduml